test/libsolidity/syntaxTests/scoping/double_function_declaration.sol
contract test {
    function fun() public { }
    function fun() public { }
}
// ----
// DeclarationError: Function with same name and arguments defined twice.
